# GainMiles

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.dokploy.yml  docker-compose.yml  pyproject.toml
.agents/skills/create-api/: SKILL.md
.agents/skills/create-api/agents/: openai.yaml
.agents/skills/create-api/assets/create_api/: cli.py  context.py  script.py  utils.py
.agents/skills/create-api/assets/create_api/templates/: __init__.py  factory.py  model.py  repository.py  router.py  schema.py
.agents/skills/create-api/assets/create_api/templates/service/: __init__.py  error_codes.py  service.py  validator.py
app/: main.py
app/core/: database.py  settings.py
app/exceptions/: __init__.py  base.py  error_codes.py  handlers.py
app/factories/: employee.py
app/models/: __init__.py  base.py  employee.py
app/repositories/: base.py  employee.py
app/routers/: __init__.py  employee.py
app/schemas/: base.py  employee.py
app/services/employee/: __init__.py  error_codes.py  service.py  validator.py
app/utils/: base_validator.py
docs/: 1.md  2.md
migrations/: env.py
migrations/versions/: 604f8093adc2_init_table.py
scripts/: import_employees.py
