[project]
name = "gainmiles"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.isort]
order-by-type = true
case-sensitive = true
combine-as-imports = true
force-wrap-aliases = true
from-first = true

[tool.ruff.lint]
select = [
    "I",
    "Q",
    "PT",
    "RET505",
    "RET506",
    "RET507",
    "RET508",
    "SIM",
    "PLR5501",
    "PLR1714",
    "E501",
    "Q",
    "COM",
]

ignore = [
    "COM812",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "csv"
parametrize-values-row-type = "tuple"
parametrize-values-type = "list"
mark-parentheses = false
